@@ -1635,6 +1635,8 @@ LISPSYM(prin_jbstrings,"*PRIN-JBSTRINGS*",system) /* IO variable */
 LISPSYM(prin_jbmodus,"*PRIN-JBMODUS*",system) /* IO variable */
 LISPSYM(prin_jblpos,"*PRIN-JBLPOS*",system) /* IO variable */
 LISPSYM(format_tabulate,"FORMAT-TABULATE",system) /* see io.d and format.lisp */ /* ABI */
+LISPSYM(stream_start_s_expression,"STREAM-START-S-EXPRESSION",system) /* io.d */
+LISPSYM(stream_end_s_expression,"STREAM-END-S-EXPRESSION",system) /* io.d */
 LISPSYM(load_forms,"*LOAD-FORMS*",system) /* see IO, COMPILER, LOADFORM */ /* ABI */
 LISPSYM(terminal_read_open_object,"*TERMINAL-READ-OPEN-OBJECT*",system) /* IO */
 LISPSYM(terminal_read_stream,"*TERMINAL-READ-STREAM*",system) /* IO */
