@@ -1,6 +1,11 @@
+2006-12-27  Sam Steingold  <sds@podval.org>
+
+	* streams.tst: tests for [ 1482465 ]: confusing format error
+	report, cause fill-stream
+
 2006-12-26  Sam Steingold  <sds@podval.org>
 
-	* macro8.tst: tests for [ 1578179 ]: Compile-file: non-similarity
+	* macro8.tst: test for [ 1578179 ]: Compile-file: non-similarity
 	of strings with cr/lf
 
 2006-12-26  Sam Steingold  <sds@podval.org>
